# Mock_GUI

./: .gitignore  README.md  test.cpp
SampleProject/: SampleProject.pro  camera.cpp  camera.ui  log.h  log.ui  mainwindow.cpp  mainwindow.h  mainwindow.ui  report.cpp  report.h  report.ui  status.ui
SampleProject/Assets/: log.ods
SampleQtQuickControls/: Mybutton.qml  SampleQtQuickControls.pro  camera_utils.cpp  camera_utils.h  camerap.qml  cv_utils.cpp  cv_utils.h  dummy.h  help  main.cpp  main.qml  predictp.qml  qml.qrc  torch_utils.cpp  torch_utils.h
TestSample/: Makefile  TestSample  TestSample.pro  testmain.cpp
baumer/doc/License/: BaumerLicense_en.htm  BaumerLicense_en.rtf
baumer/examples/C++/: README.TXT  install_example_linux.sh
baumer/examples/C++/src/: CMakeLists.txt
baumer/examples/C++/src/0_Common/001_ImageCaptureMode_Polling/: 001_ImageCaptureMode_Polling.cpp
baumer/examples/C++/src/0_Common/002_CameraParameterTree/: 002_CameraParameterTree.cpp  CMakeLists.txt
baumer/examples/C++/src/0_Common/003_CameraConfiguration/: 003_CameraConfiguration.cpp
baumer/examples/C++/src/0_Common/004_PartialScan_ExternalBuffer/: 004_PartialScan_ExternalBuffer.cpp
baumer/examples/C++/src/0_Common/005_PixelTransformation/: 005_PixelTransformation.cpp
baumer/examples/C++/src/0_Common/006_DeviceEventMode_Polling/: 006_DeviceEventMode_Polling.cpp
baumer/examples/C++/src/0_Common/007_Chunk/: 007_Chunk.cpp
baumer/examples/C++/src/0_Common/008_Trace/: 008_Trace.cpp
baumer/examples/C++/src/0_Common/009_ShortExample/: 009_ShortExample.cpp
baumer/examples/C++/src/0_Common/010_PnPEventMode_Polling/: 010_PnPEventMode_Polling.cpp
baumer/examples/C++/src/0_Common/011_ImageCaptureMode_Handler/: 011_ImageCaptureMode_Handler.cpp
baumer/examples/C++/src/0_Common/012_DeviceEventMode_Handler/: 012_DeviceEventMode_Handler.cpp
baumer/examples/C++/src/0_Common/013_PnPEventMode_Handler/: 013_PnPEventMode_Handler.cpp
baumer/examples/C++/src/0_Common/014_Sharpening/: 014_Sharpening.cpp
baumer/examples/C++/src/0_Common/015_ColorProcessing/: 015_ColorProcessing.cpp
baumer/examples/C++/src/0_Common/016_FlatField_Calculation/: 016_FlatField_Calculation.cpp
baumer/examples/C++/src/0_Common/017_FlatField_Correction/: 017_FlatField_Correction.cpp  CMakeLists.txt
baumer/examples/C++/src/0_Common/018_ImageCapture_BufferedMode/: 018_ImageCapture_BufferedMode.cpp  CMakeLists.txt
baumer/examples/C++/src/0_Common/019_MultiCameraMultiThread/: 019_MultiCameraMultiThread.cpp  BufferInformation.h  CMakeLists.txt  Camera.cpp  Camera.h  CameraManager.cpp  CameraManager.h  CameraTiming.cpp  CameraTiming.h  DoubleBufferHandler.cpp  DoubleBufferHandler.h  TimingStatistic.cpp  TimingStatistic.h
baumer/examples/C++/src/0_Common/020_Polarized/: 020_Polarized.cpp  CMakeLists.txt
baumer/examples/C++/src/1_GigE/101_HeartbeatTimeout/: 101_HeartbeatTimeout.cpp
baumer/examples/C++/src/1_GigE/102_ForceIP/: 102_ForceIP.cpp
baumer/examples/C++/src/1_GigE/103_Multicast/: 103_Multicast.cpp
baumer/examples/C++/src/2_Update/201_DeviceUpdate/: 201_DeviceUpdate.cpp
baumer/examples/C++/src/2_Update/202_ShadingTableUpdate/: 202_ShadingTableUpdate.cpp
baumer/examples/C++/src/2_Update/203_AppletUpdate/: 203_AppletUpdate.cpp
baumer/examples/C++/src/3_U3V/301_PortIdents/: 301_PortIdents.cpp
baumer/examples/C++/src/5_Misc/502_CreateVideoFile/: 502_CreateVideoFile.cpp  CMakeLists.txt
baumer/examples/C++/src/Shared/: Arguments.cpp  Arguments.h  HelperFunctions.cpp  HelperFunctions.h  Shared.cpp  Shared.h
baumer/examples/C/src/: CMakeLists.txt
baumer/examples/C/src/.vscodein/: c_cpp_properties.json  launch.json  tasks.json
baumer/examples/C/src/0_Common/001_ImageCaptureMode_Polling/: 001_ImageCaptureMode_Polling.c
baumer/examples/C/src/0_Common/002_CameraParameterTree/: 002_CameraParameterTree.c
baumer/examples/C/src/0_Common/003_CameraConfiguration/: 003_CameraConfiguration.c  CMakeLists.txt
baumer/examples/C/src/0_Common/004_PartialScan_ExternalBuffer/: 004_PartialScan_ExternalBuffer.c
baumer/examples/C/src/0_Common/005_PixelTransformation/: 005_PixelTransformation.c
baumer/examples/C/src/0_Common/006_DeviceEventMode_Polling/: 006_DeviceEventMode_Polling.c
baumer/examples/C/src/0_Common/007_Chunk/: 007_Chunk.c
baumer/examples/C/src/0_Common/008_Trace/: 008_Trace.c
baumer/examples/C/src/0_Common/009_ShortExample/: 009_ShortExample.c
baumer/examples/C/src/0_Common/010_PnPEventMode_Polling/: 010_PnPEventMode_Polling.c
baumer/examples/C/src/0_Common/011_ImageCaptureMode_Handler/: 011_ImageCaptureMode_Handler.c
baumer/examples/C/src/0_Common/012_DeviceEventMode_Handler/: 012_DeviceEventMode_Handler.c
baumer/examples/C/src/0_Common/013_PnPEventMode_Handler/: 013_PnPEventMode_Handler.c
baumer/examples/C/src/1_GigE/101_HeartbeatTimeout/: 101_HeartbeatTimeout.c
baumer/examples/C/src/1_GigE/102_ForceIP/: 102_ForceIP.c
baumer/include/bgapi2_genicam/: bgapi2_types.h
baumer/lib/: libbgapi2_gige.cti  libbgapi2_usb.cti
baumer/tools/: IpConfigTool  qt.conf
baumer/tools/lib/: libQt5Concurrent.la  libQt5Concurrent.prl  libQt5Concurrent.so.5.9.1  libQt5Core.la  libQt5Core.prl  libQt5DBus.la  libQt5DBus.prl  libQt5DBus.so.5.9.1  libQt5Gui.la  libQt5Gui.prl  libQt5Network.la  libQt5Network.prl  libQt5Network.so.5.9.1  libQt5OpenGL.la  libQt5OpenGL.prl  libQt5OpenGL.so.5.9.1  libQt5Qml.la  libQt5Qml.prl  libQt5Qml.so.5.9.1  libQt5Test.la  libQt5Test.prl  libQt5Test.so.5.9.1  libQt5Widgets.la  libQt5Widgets.prl  libQt5XcbQpa.la  libQt5XcbQpa.prl  libQt5XcbQpa.so.5.9.1  libQt5Xml.la  libQt5Xml.prl  libQt5Xml.so.5.9.1  libavcodec.so.58.35.100  libavformat.so.58.20.100  libavutil.so.56.22.100  libswscale.so.5.3.100
build-SampleProject-Desktop-Debug/: Makefile  SampleProject  moc_camera.cpp  moc_log.cpp  moc_mainwindow.cpp  moc_report.cpp  moc_status.cpp  ui_camera.h  ui_log.h  ui_mainwindow.h  ui_report.h  ui_status.h
build-SampleQtQuickControls-Qt_5_5_1_in_PATH_qt5-Debug/: Makefile  SampleQtQuickControls  moc_camera_utils.cpp  moc_cv_utils.cpp  moc_torch_utils.cpp  qrc_qml.cpp
(+307 files in other folders)
